make that libsodium-dev for headers

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ matrix:
     - rust: nightly
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get install -y libsodium18
+    - sudo apt-get install -y libsodium-dev
