--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: rust
+install:
+- wget https://github.com/jedisct1/libsodium/releases/download/1.0.11/libsodium-1.0.11.tar.gz
+- tar xvfz libsodium-1.0.11.tar.gz
+- cd libsodium-1.0.11 && ./configure --prefix=/usr && make && sudo make install && cd ..
+script:
+- cargo build --verbose
+- cargo test --verbose
 rust:
   - stable
   - beta
@@ -6,6 +13,3 @@ rust:
 matrix:
   allow_failures:
     - rust: nightly
-before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install -y libsodium-dev
