--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rtss"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["eukaryote <sapientdust+github@gmail.com>"]
 
 [lib]
@@ -8,10 +8,9 @@ name = "rtss"
 path = "src/lib.rs"
 
 [dependencies]
-rand = "0.3"
-sodiumoxide = "0.0.14"
-rustc-serialize = "0.3"
-
+rand = "0.6.1"
+sodiumoxide = "0.2.0"
+hex = "0.3.2"
 
 [dependencies.clap]
 version = "2"
